--- a/ru.html
+++ b/ru.html
@@ -57,14 +57,14 @@
                     <li><a href="https://www.languagepanel.com/order/buypack/Mjkx" class="site-btn site-btn--accent" target="_blank">Get started</a></li>
                     <li>
                       <div class="menu__dropdown d-t-none">
-                        <a class="link link--gray menu__dropdown-btn">Es
+                        <a class="link link--gray menu__dropdown-btn">Ru
                           <span><i class="mdi mdi-chevron-down"></i></span>
                         </a>
                         <div class="menu__dropdown-content">
                           <a class="link link--gray" href="index.html">En</a>
-                          <a class="link link--gray link--gray-active" href="es.html">Es</a>
+                          <a class="link link--gray" href="es.html">Es</a>
                           <a class="link link--gray" href="fr.html">Fr</a>
-                          <a class="link link--gray" href="ru.html">Ru</a>
+                          <a class="link link--gray link--gray-active" href="ru.html">Ru</a>
                         </div>
                       </div>
                     </li>
@@ -97,14 +97,14 @@
               <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/student" class="link link--dark-gray"  target="_blank">Student Login</a></li>
               <li class="mobile-menu__li"><a href="https://www.languagepanel.com/order/buypack/Mjkx" class="site-btn site-btn--accent">Schedule your assessment</a></li>
               <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/applicant/login#signup" class="site-btn site-btn--accent">Teach with us</a></li>
-              <li class="mobile-menu__li mobile-menu__li-collapse"><a class="link link--dark-gray">Es
+              <li class="mobile-menu__li mobile-menu__li-collapse"><a class="link link--dark-gray">En
                 <span><i class="mdi mdi-chevron-down"></i></span></a></li>
               <li class="mobile-menu__ul--collapsed">
                 <ul class="mobile-menu__ul">
-                  <li class="mobile-menu__li"><a href="index.html" class="link link--gray">En</a></li>
-                  <li class="mobile-menu__li"><a href="es.html" class="link link--gray link--gray-active">Es</a></li>
-                  <li class="mobile-menu__li"><a href="fr.html" class="link link--gray">Fr</a></li>
-                  <li class="mobile-menu__li"><a href="ru.html" class="link link--gray">Ru</a></li>
+                  <li class="mobile-menu__li"><a href="es.html" class="link link--gray">En</a></li>
+                  <li class="mobile-menu__li"><a href="es.html" class="link link--gray">Es</a></li>
+                  <li class="mobile-menu__li"><a href="es.html" class="link link--gray">Fr</a></li>
+                  <li class="mobile-menu__li"><a href="index.html" class="link link--gray link--gray-active">Ru</a></li>
                 </ul>
               </li>
             </ul>
