--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                    
                     <li><a href="#section-how-it-works" class="link link--gray link--gray">How it works</a></li>
                     <li><a href="#section-pricing" class="link link--gray link--gray">Pricing</a></li>
-                    <li><a href="https://languagepanel.com/mal/student" class="link link--gray link--gray" target="_blank">Student login</a></li>
+                    <li><a href="https://app.maltzenglish.com/student" class="link link--gray link--gray" target="_blank">Student login</a></li>
                   </ul>
                 </nav>
               </div>
@@ -64,6 +64,7 @@
                           <a class="link link--gray link--gray-active" href="index.html" >En</a>
                           <a class="link link--gray" href="es.html">Es</a>
                           <a class="link link--gray" href="fr.html">Fr</a>
+                          <a class="link link--gray" href="ru.html">Ru</a>
                         </div>
                       </div>
                     </li>
@@ -91,17 +92,19 @@
             <ul class="mobile-menu__ul">
               <li class="mobile-menu__li"><a href="#section-how-it-works" class="link link--dark-gray link--gray-active">How it works</a></li>
               <li class="mobile-menu__li"><a href="#section-pricing" class="link link--dark-gray" >Pricing</a></li>
-              <li class="mobile-menu__li"><a href="https://languagepanel.com/mal/code" class="link link--dark-gray"  target="_blank">Redeem code</a></li>
-              <li class="mobile-menu__li"><a href="https://languagepanel.com/mal/callback" class="link link--dark-gray"  target="_blank">Consultation</a></li>
-              <li class="mobile-menu__li"><a href="https://languagepanel.com/mal/student" class="link link--dark-gray"  target="_blank">Student Login</a></li>
+              <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/code" class="link link--dark-gray"  target="_blank">Redeem code</a></li>
+              <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/callback" class="link link--dark-gray"  target="_blank">Consultation</a></li>
+              <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/student" class="link link--dark-gray"  target="_blank">Student Login</a></li>
               <li class="mobile-menu__li"><a href="https://www.languagepanel.com/order/buypack/Mjkx" class="site-btn site-btn--accent">Schedule your assessment</a></li>
+              <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/applicant/login#signup" class="site-btn site-btn--accent">Teach with us</a></li>
               <li class="mobile-menu__li mobile-menu__li-collapse"><a class="link link--dark-gray">En
                 <span><i class="mdi mdi-chevron-down"></i></span></a></li>
               <li class="mobile-menu__ul--collapsed">
                 <ul class="mobile-menu__ul">
                   <li class="mobile-menu__li"><a href="index.html" class="link link--gray link--gray-active">En</a></li>
-                  <li class="mobile-menu__li"><a href="index-es.html" class="link link--gray">Sp</a></li>
-                  <li class="mobile-menu__li"><a href="index-fr.html" class="link link--gray">Fr</a></li>
+                  <li class="mobile-menu__li"><a href="es.html" class="link link--gray">Sp</a></li>
+                  <li class="mobile-menu__li"><a href="fr.html" class="link link--gray">Fr</a></li>
+                  <li class="mobile-menu__li"><a href="ru.html" class="link link--gray">Ru</a></li>
                 </ul>
               </li>
             </ul>
@@ -302,7 +305,7 @@
                   <p>Improve your level of English proficiency with a private teacher.</p>
                   <p class="pricing__card-price pricing__card-price--year">$1,296</p>
                   <p class="pricing__card-price pricing__card-price--month">$120</p>
-                  <p class="pricing__card-price--per-month">monthly</p>
+                  <p class="pricing__card-price--per-month">Yearly</p>
                   <div class="pricing__card-price-save-wrap">
                     <p class="pricing__card-price-save">Save 10%</p>
                     <hr class="pricing__hr">
@@ -325,7 +328,7 @@
                   <p><abbr class="bold">Quickly</abbr> improve your level of English proficiency with a private teacher.</p>
                   <p class="pricing__card-price pricing__card-price--year">$1,815</p>
                   <p class="pricing__card-price pricing__card-price--month">$168</p>
-                  <p class="pricing__card-price--per-month">monthly</p>
+                  <p class="pricing__card-price--per-month">Yearly</p>
                   <div class="pricing__card-price-save-wrap">
                     <p class="pricing__card-price-save">Save 10%</p>
                     <hr class="pricing__hr">
@@ -348,7 +351,7 @@
                   <p>Group classes with a maximum of 6 other students (1-on-1 assessments).</p>
                   <p class="pricing__card-price pricing__card-price--year">$1,079</p>
                   <p class="pricing__card-price pricing__card-price--month">$99</p>
-                  <p class="pricing__card-price--per-month">monthly</p>
+                  <p class="pricing__card-price--per-month">Yearly</p>
                   <div class="pricing__card-price-save-wrap">
                     <p class="pricing__card-price-save">Save 10%</p>
                     <hr class="pricing__hr">
@@ -372,7 +375,7 @@
                 <p class="section__description">
                   More or less lessons? Complex schedule with different connection types?<br/>Contact us for a custom study plan.
                 </p>
-                <a href="https://languagepanel.com/mal/mail/contact" class="mt-50 site-btn site-btn--accent " target="_blank">Contact us</a>
+                <a href="https://app.maltzenglish.com/mail/contact" class="mt-50 site-btn site-btn--accent " target="_blank">Contact us</a>
               </div>
             </div>
           </div>
@@ -656,7 +659,7 @@
                 Schedule your assessment</a>
             </div>
             <div class="col-6">
-              <a href="https://languagepanel.com/mal/callback" class="site-btn site-btn--light site-btn--left" target="_blank">
+              <a href="https://app.maltzenglish.com/callback" class="site-btn site-btn--light site-btn--left" target="_blank">
                 Book a consultation</a>
             </div>
           </div>
@@ -674,9 +677,10 @@
                 <ul>
                   <li><a class="link link--gray" href="https://docs.maltzenglish.com/faq" target="_blank">FAQ</a></li>
                   <li><a class="link link--gray" href="https://docs.maltzenglish.com/privacy-policy" target="_blank">Privacy</a></li>
-                  <li><a class="link link--gray" href="https://languagepanel.com/mal/mail/contact" target="_blank">Contact</a></li>
+                  <li><a class="link link--gray" href="https://app.maltzenglish.com/mail/contact" target="_blank">Contact</a></li>
                   <li><a href="https://docs.maltzenglish.com/level-definition" class="link link--gray" target="_blank">Level definition</a></li>
-                  <li><a href="https://languagepanel.com/mal/code " class="link link--gray" target="_blank">Redeem code</a></li>
+                  <li><a href="https://app.maltzenglish.com/code " class="link link--gray" target="_blank">Redeem code</a></li>
+                  <li><a href="https://app.maltzenglish.com/applicant/login#signup" class="link link--gray" target="_blank">Teach</a></li>
                 </ul>
               </nav>
               <p class="footer-menu__social">
@@ -701,7 +705,7 @@
             <div class="row">
               <div class="col-12">
                 <p id="desktop_copyright">&copy; 2015<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, Maltz English - Built with <i class="fa fa-heart"></i> & <i class="fa fa-coffee"></i> in Boston, Dallas, Moscow, and Montreal.</p>
-                <p id="mobile_copyright">2020, Maltz English -<br/>Built with <i class="fa fa-heart"></i> & <i class="fa fa-coffee"></i> in Boston, Dallas, Moscow, and Kolkata.</p>
+                <p id="mobile_copyright">2020, Maltz English -<br/>Built with <i class="fa fa-heart"></i> & <i class="fa fa-coffee"></i> in Boston, Dallas, Kolkata, and Moscow.</p>
               </div>
             </div>
           </div>
