--- a/ru.html
+++ b/ru.html
@@ -95,8 +95,8 @@
               <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/code" class="link link--dark-gray"  target="_blank">Redeem code</a></li>
               <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/callback" class="link link--dark-gray"  target="_blank">Consultation</a></li>
               <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/student" class="link link--dark-gray"  target="_blank">Student Login</a></li>
+              <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/applicant/login#signup" class="link link--dark-gray"  target="_blank">Teach with us</a></li>
               <li class="mobile-menu__li"><a href="https://www.languagepanel.com/order/buypack/Mjkx" class="site-btn site-btn--accent">Schedule your assessment</a></li>
-              <li class="mobile-menu__li"><a href="https://app.maltzenglish.com/applicant/login#signup" class="site-btn site-btn--accent">Teach with us</a></li>
               <li class="mobile-menu__li mobile-menu__li-collapse"><a class="link link--dark-gray">En
                 <span><i class="mdi mdi-chevron-down"></i></span></a></li>
               <li class="mobile-menu__ul--collapsed">
