--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                       <li>Post your certificate on <abbr class="bold">LinkedIn</abbr></li>
                     </ul>
                   <div class="header-home__btns"> 
-                    <a href="https://www.languagepanel.com/order/buypack/Mjkx" class="site-btn site-btn--accent header-home__btn" target="_blank">Get started</a>
+                    <a href="https://www.languagepanel.com/order/buypack/Mjkx" class="site-btn site-btn--accent header-home__btn" target="_blank">Gett started</a>
                     <a href="" class="site-btn site-btn--light header-home__btn">Book a consultation</a>
                   </div>
                 </div>
